--- a/1 - Calculator/style.css
+++ b/1 - Calculator/style.css
@@ -66,7 +66,6 @@ button {
 
 input {
     grid-area: input;
-    position: absolute;
     width: 310px;
     height: 59px;
     margin-bottom: 20px;
@@ -76,8 +75,9 @@ input {
     text-align: right;
     color: white;
     background-color: rgb(0, 0, 0);
-    top: -90px;
     border: 4px solid black;
+    position: relative;
+    top: 0;
 }
 
 .last {
@@ -148,4 +148,5 @@ z-index: 2;
 opacity: 0.4;
 width: 100%;
 height: 100vh;
+
 }
